changed VAMASParser to accept a filename rather than a full URI